--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@bandwidth/messaging": "^1.0.1",
     "asyncawait": "^3.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsdom": "^16.2.0",
     "node-bandwidth": "^3.0.3",
